# chat-system

./: .gitignore  LICENSE  README.md  docker-compose.yaml
go-grpc-chat-server/: README.md  go.mod  go.sum  main.go
go-grpc-chat-server/.devcontainer/: Dockerfile  devcontainer.json
go-grpc-chat-server/cmd/: root.go  serve.go
go-grpc-chat-server/internal/chat/: chat.pb.go  chat.proto  chat_grpc.pb.go  chat_service.go
go-grpc-chat-server/internal/kafka/: kafka.go
go-grpc-chat-server/internal/messages/: message_service.go  messages.pb.go  messages.proto  messages_grpc.pb.go
go-grpc-chat-server/pkg/kafka/: kafka.go
rust-grpc-chat-client/: Cargo.toml  README.md  build.rs
rust-grpc-chat-client/.devcontainer/: Dockerfile  devcontainer.json
rust-grpc-chat-client/proto/: messages.proto
rust-grpc-chat-client/src/: client.rs
