[package]
name = "rust-grpc-chat-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the gRPC client
name = "client"
path = "src/client.rs"

[dependencies]
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
async-stream = "0.3"
tower = { version = "0.4", features = ["full"] }

[build-dependencies]
tonic-build = "0.10"